kubernetes/services/busy-box.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: busy-box 
spec: 
  containers: 
  - name: busybox 
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 10; done']
