kubernetes/services/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  type: ClusterIP
  selector:
    app: masmovil-backend-multitiendas
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
